add support for JDK11 fix #1